app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-p3
  namespace: dev
  labels:
    app: app-p3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-p3
  template:
    metadata:
      labels:
        app: app-p3
    spec:
      containers:
      - name: app-p3
        image: wil42/playground:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: app-p3
  namespace: dev
spec:
  selector:
    app: app-p3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
